fixed post modal layout/responsiveness needs more fixing on mobile

--- a/application/frontend/src/components/Modals/PostModal.module.css
+++ b/application/frontend/src/components/Modals/PostModal.module.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 1200px;
     max-width: 100%;
+    height: 800px;
     flex-flow: row wrap;
 }
 
@@ -9,7 +10,6 @@
 .post-image{
     flex-basis: 50%;
     background-color: black;
-    max-height: 90vh;
 }
 
 .post-image img{
@@ -24,6 +24,10 @@
     padding-top: 1rem;
     flex-basis: 50%;
     box-shadow: var(--elevation-1);
+    display: grid;
+    grid-template-rows: repeat(3, auto) 40px;
+    height: 100%;
+    align-content: flex-start;
 }
 
 /*Post Detail*/
@@ -31,17 +35,16 @@
 .post-detail{
     margin-left: 1rem;
     display: grid;
-    grid-template-rows: repeat(2,22.5px) auto;
+    grid-template-rows: repeat(2, 22.5px);
     grid-template-columns: 45px auto;
     grid-template-areas: "post-detail-pic  post-detail-name     "
-                         "post-detail-pic  post-detail-timestamp"
-                         "post-detail-body post-detail-body     ";
+                         "post-detail-pic  post-detail-timestamp";
+    flex-basis: 100%;
 }
 
 /* Profile Pic */
 .post-detail-pic{ 
-    width:100%;
-    height:100%;
+    width: 45px;
     object-fit: cover;
     border-radius: 7.5px;
     grid-area: post-detail-pic;
@@ -60,37 +63,41 @@
     font-size: var(--base-size);
 }
 
-.post-detail-body{
-    grid-area: post-detail-body;
-    padding: 1rem 1rem 1rem 0;
+
+/*Body*/
+.post-body{
+    margin:0.5rem 1rem;
     font-family: var(--ff-secondary);
+    flex-basis: 100%;
 }
 
 
 /* Comments  */
 
 .post-comments{
+    flex-basis: 100%;
     padding-left:0;
     list-style: none;
     overflow: auto;
-    height: calc(100% - 11rem);
 }
 
 .post-leave-comment{
     display: flex;
-    margin-bottom: 1rem;
+    position: absolute;
+    bottom: .25rem;
+    width: 50%;
+    height: 40px;
 }
 
 .post-leave-comment input{
     margin-left: 1rem;
-    flex-basis:80%;
+    flex-basis: 80%;
 }
 
 .post-leave-comment button{
     flex-basis: 15%;
     margin: 0 2.5%;
     background-color: var(--primary-clr);
-    line-height: 32px;
     color: white;
     border: none;
     border-radius: 7.5px;
@@ -123,15 +130,18 @@
 @media (max-width: 768px){
     .post-image{
         flex-basis: 100%;
-        max-height: 50vh;
+        height: 40vh;
     }
 
     .post-content{
         flex-basis: 100%;
+        height: 60vh;
     }
 
-    .post-detail{
+    .post-leave-comment{
+        width: 100%;
     }
+
 }
 
 
